[package]
name = "ludwig"
version = "0.1.0"
authors = ["Chris Dickinson <christopher.s.dickinson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-h1 = "2.1.4"
serde = "1.0.117"
serde_json = "1.0.59"
futures = "0.3.8"
async-trait = "0.1.41"
anyhow = "1.0.34"
http-types = "2.7.0"

[dependencies.async-std]
version = "1.7.0"
features = ["attributes"]
